[gd_scene load_steps=9 format=2]

[ext_resource path="res://src/scenes/UserInterface/HealthStatus.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/script/UserInterface.gd" type="Script" id=2]
[ext_resource path="res://src/scenes/UserInterface/QuitButton.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/scenes/UserInterface/RetryButton.tscn" type="PackedScene" id=4]
[ext_resource path="res://asset/Fonts/GILLUBCD.TTF" type="DynamicFontData" id=5]
[ext_resource path="res://asset/Fonts/Interface_theme.tres" type="Theme" id=7]
[ext_resource path="res://asset/Music/man-scream.mp3" type="AudioStream" id=8]

[sub_resource type="DynamicFont" id=1]
size = 26
use_filter = true
font_data = ExtResource( 5 )

[node name="UserInterface" type="Control"]
pause_mode = 2
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="PlayerStatus" parent="." instance=ExtResource( 1 )]

[node name="VictimStatus" parent="." instance=ExtResource( 1 )]
margin_left = 274.0
margin_top = 22.0
margin_right = 391.0
margin_bottom = 70.0

[node name="SaveTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="saveVictim" type="Label" parent="SaveTimer"]
visible = false
anchor_left = 0.5
anchor_right = 0.5
margin_left = -65.0
margin_top = 70.0
margin_right = 69.0
margin_bottom = 92.0
theme = ExtResource( 7 )
text = "Save Victim"
align = 1
valign = 1

[node name="PauseOverlay" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.752941 )

[node name="Label" type="Label" parent="PauseOverlay"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -100.0
margin_top = 200.0
margin_right = 99.0
margin_bottom = 233.0
custom_colors/font_color_shadow = Color( 0.270588, 0.619608, 0.25098, 1 )
custom_fonts/font = SubResource( 1 )
text = "Paused"
align = 1
valign = 1

[node name="pauseMenu" type="VBoxContainer" parent="PauseOverlay"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -76.0
margin_top = -51.5
margin_right = 76.0
margin_bottom = 51.5

[node name="RetryButton" parent="PauseOverlay/pauseMenu" instance=ExtResource( 4 )]
margin_right = 152.0
margin_bottom = 58.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="QuitButton" parent="PauseOverlay/pauseMenu" instance=ExtResource( 3 )]
margin_top = 62.0
margin_right = 152.0
margin_bottom = 120.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="EnemyKill" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )

[connection signal="gameover" from="PlayerStatus" to="." method="_on_Player_gameover"]
[connection signal="gameover" from="VictimStatus" to="." method="_on_Victim_gameover"]
[connection signal="timeout" from="SaveTimer" to="." method="_on_SaveTimer_timeout"]
